# audio-server

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/1.0/mvp/: README.md  implementation-summary.md  prd.md  workplan.md
src/: ApiServer.cpp  ApiServer.h  AudioEngine.cpp  AudioEngine.h  Config.cpp  Config.h  JsonBuilder.h  Main.cpp  RingBuffer.h  ToneGenerator.h
src/transport/: TcpPcmBackend.cpp  TcpPcmBackend.h  TcpPcmProtocol.h  TransportBackend.h
